--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "start": "npm run serve",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
@@ -15,6 +16,7 @@
     "@xbeat/ui-kit": "file:../xbeat-ui-kit/xbeat-ui-kit-0.1.0.tgz",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "date-fns": "^2.21.1",
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
     "vue-apollo": "^3.0.7",
@@ -23,6 +25,7 @@
     "vue-property-decorator": "^9.1.2",
     "vue-router": "^3.2.0",
     "vue-svg-inline-loader": "^2.1.2",
+    "vuedraggable": "^2.24.3",
     "vuex": "^3.4.0",
     "vuex-module-decorators": "^1.0.1"
   },
@@ -30,6 +33,8 @@
     "@commitlint/cli": "^12.0.1",
     "@commitlint/config-conventional": "^12.0.1",
     "@types/cropperjs": "^1.3.0",
+    "@types/date-fns": "^2.6.0",
+    "@types/vuedraggable": "^2.23.2",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
     "@vue/cli-plugin-babel": "~4.5.0",
