--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@xbeat/toolkit": "file:../toolkit/xbeat-toolkit-1.0.0.tgz",
     "@xbeat/ui-kit": "file:../xbeat-ui-kit/xbeat-ui-kit-0.1.0.tgz",
     "axios": "^0.21.1",
+    "copy-to-clipboard": "^3.3.1",
     "core-js": "^3.6.5",
     "date-fns": "^2.21.1",
     "register-service-worker": "^1.7.1",
